# file-embed-exp

./: Makefile  README.md  file-embed-exp.cabal
src/: EmbedFile.hs  Main.hs  Static.hs
