name:                file-embed-exp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/donatello/file-embed-exp#readme
author:              Aditya Manthramurthy
maintainer:          myaditya@protonmail.ch
copyright:           Apache2.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable file-embed-exp
  hs-source-dirs:      src
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -optl-static
  main-is:             Main.hs
  other-modules:       Static
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , bytestring == 0.10.8.2
                     , file-embed == 0.0.10.1
